# LiveCC

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: ccmf-player-tests.yml  docker.yml  player-tests.yml  tests.yml
ccmf-player/: .gitignore  CMakeLists.txt  README.md
ccmf-player/src/app/: CMakeLists.txt  audio_output.cpp  audio_output.hpp  main.cpp  ui.hpp  video_view.cpp
ccmf-player/src/engine/: CMakeLists.txt  audio.cpp  byteio.hpp  chunk.cpp  chunk.hpp  controls_math.cpp  controls_math.hpp  engine.cpp  index.cpp  render.hpp  video.cpp  video.hpp
ccmf-player/tests/: CMakeLists.txt  test_audio.cpp  test_controls_math.cpp  test_index.cpp  test_render.cpp  test_support.cpp  test_support.hpp  test_video.cpp
ccmf-player/tests/fixtures/: audio_only.ccmf  small_stereo.ccmf
docs/: cc-media-format.md
lua/: install.lua  livecc.speakers.example  player.lua
media/: .gitignore  README.md
player/: CMakeLists.txt  README.md
player/src/app/: CMakeLists.txt  audio_output.cpp  audio_output.hpp  main.cpp  ui.cpp  ui.hpp  video_view.cpp  video_view.hpp
player/src/engine/: CMakeLists.txt  audio.cpp  audio.hpp  chunk.cpp  chunk.hpp  engine.cpp  engine.hpp  index.cpp  index.hpp  render.cpp  resync.cpp  resync.hpp  video.cpp  video.hpp
player/tests/: CMakeLists.txt  test_audio.cpp  test_chunk.cpp  test_controls_math.cpp  test_engine.cpp  test_index.cpp  test_resync.cpp  test_support.cpp  test_video.cpp
player/tests/fixtures/: multi_gop_mono.ccmf  video_only.ccmf
server/: cc_encoder.py  cc_media.py  cc_metrics.py  cc_palette.py  ccmf.py  conftest.py  dfpwm.py  main.py  pytest.ini  rans.py  requirements-dev.txt  requirements.txt  session.py  transcoder.py
server/benchmarks/: README.md  bench_buffer.py  bench_compression.py  bench_encoder.py  bench_gop.py  bench_quality.py  bench_samples.py  bench_splitter.py  bench_startup.py  harness.py  run_all.py
server/tests/: cc_stubs.lua  test_cc_encoder.py  test_cc_palette.py  test_ccmf.py  test_convert_to_ccmf.py  test_dfpwm.py  test_fullstack.py  test_main.py  test_media_samples.py  test_metrics.py  test_player_lua.py  test_rans.py  test_render_cc.py  test_session.py  test_transcoder.py
server/tools/: convert_to_ccmf.py  render_cc.py  run_all_benchmarks.py
